--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "keeper-part-3-starting",
+  "name": "PanterasResourceManagement",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
